<resources>
    <string name="app_name">My App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="your_own_todo_notes_app">Your Own ToDo Notes App</string>
    <string name="create_your_own_todo_for_the_day">Create your own ToDo for the day</string>
    <string name="next">Next</string>
    <string name="organise_it_with_perfection">Organise it with perfection</string>
    <string name="add_notes_with_image_either_from_camera_or_gallery">Add notes with Image either from Camera or Gallery</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="plan_and_record_your_todo_on_your_phone">Plan and record your todo on your phone</string>
    <string name="fullname">FullName</string>
    <string name="username">username</string>
    <string name="select_image">Select Image</string>
    <string name="empty_string">Fields cannot be empty</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_picker">Select Picker</string>
</resources>